--- a/Разработка Backend Java/Теория/Java/Multithreading/Java Util Concurrent/Основные инструменты/Пулы потоков.md
+++ b/Разработка Backend Java/Теория/Java/Multithreading/Java Util Concurrent/Основные инструменты/Пулы потоков.md
@@ -2,15 +2,15 @@
 
 **ExecutorService** – интерфейс для работы с пулом потоков.
 
-**Executors** – утилитный класс для создания различных типов пулов потоков
+**Executors** – утилитный класс для создания различных типов пулов потоков.
 
-***newFixedThreadPool***(int nThreads) – фиксированное кол-во потоков
+***newFixedThreadPool***(int nThreads) – фиксированное кол-во потоков. Количество потоков обычно выбирается по количеству логических потоков процессора. Если много блокирующих задач нужно выбрать гораздо больше или использовать инструменты реактивного программирования.
 
-newCachedThreadPool() - если поток освободился, он будет повторно использован, если нет свободных потоков, создается новый. Если потоки остаются неиспользованными долгое время, они будут завершены.
+***newCachedThreadPool***() - если поток освободился, он будет повторно использован, если нет свободных потоков, создается новый. Если потоки остаются неиспользованными долгое время, они будут завершены.
 
 ***newSingleThreadExecutor***() – пул с одним потоком.
 
-***newScheduledThreadPool***(int corePoolSize) – по расписанию
+***newScheduledThreadPool***(int corePoolSize) – по расписанию.
 
 **Управление и завершение:**
 
