--- a/Разработка Backend Java/Теория/Java/Multithreading/База/База.md
+++ b/Разработка Backend Java/Теория/Java/Multithreading/База/База.md
@@ -1,7 +1,7 @@
 [[Happens-before]]
 [[Volatile]]
 [[Атомики]]
-[[Параллелизм]]
+[[Многопоточность и Параллелизм]]
 [[Потокобезопасность]]
 [[Процесс, поток]]
 [[Состояния потоков]]
